--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,5 @@ orbs:
 workflows:
   maven_test:
     jobs:
-      - maven/test # checkout, build, test, and upload test results
+      - maven/test: # checkout, build, test, and upload test results
+          command: mvn install -DskipTests dependency:go-offline
